--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ markdown: rdiscount
 highlighter: rouge
 permalink: /:year/:month/:day/:title.html
 name: "something said here"
-markdown: rdiscount
+markdown: kramdown
 
 author: "yulin"
 atom-baseurl: "http://yulin.me"
