--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,15 @@
-markdown: rdiscount
 highlighter: rouge
 permalink: /:year/:month/:day/:title.html
 name: "something said here"
 markdown: kramdown
 
-author: "yulin"
+author: "Yulin"
 atom-baseurl: "http://yulin.me"
 
-comment:
-    disqus: yulin-me
+disqus:
+    # Leave shortname blank to disable comments site-wide.
+    # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
+    shortname: yulin-me
 
 navigations:
   - title: Archive
