--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ atom-baseurl: "http://yulin.me"
 disqus:
     # Leave shortname blank to disable comments site-wide.
     # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
-    shortname: yulin-me
+    shortname: 'yulin-me'
 
 navigations:
   - title: Archive
