--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,7 @@ markdown: kramdown
 author: "Yulin"
 atom-baseurl: "http://yulin.me"
 
-disqus:
-    # Leave shortname blank to disable comments site-wide.
-    # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
-    shortname: 'yulin-me'
+disqus: "yulin-me"
 
 navigations:
   - title: Archive
