--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 highlighter: rouge
 permalink: /:year/:month/:day/:title.html
-name: "something said here"
+name: "六月烟雨"
 markdown: kramdown
 
 author: "Yulin"
