--- a/_config.yml
+++ b/_config.yml
@@ -20,4 +20,4 @@ navigations:
     href: /about.html
   - title: Gallery
     class: fa fa-film
-    href: https://www.flickr.com/photos/snake_bill/
+    href: https://www.instagram.com/snake_bill/
