--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ permalink: /:year/:month/:day/:title.html
 name: "六月烟雨"
 
 author: "Yulin"
-atom-baseurl: "http://yulin.me"
+atom-baseurl: "https://yulin.me"
 
 disqus: "yulin-me"
 
