--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 highlighter: rouge
 markdown: kramdown
 permalink: /:year/:month/:day/:title.html
-name: "六月烟雨"
+name: "ŸŁ · me"
 
 author: "Yulin"
 atom-baseurl: "https://yulin.me"
